--- a/vue/13.过渡效果/列表过渡/列表的位移过渡-2.html
+++ b/vue/13.过渡效果/列表过渡/列表的位移过渡-2.html
@@ -2,21 +2,132 @@
 <html lang='en'>
 
 <head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <meta http-equiv='X-UA-Compatible' content='ie=edge'>
-    <title>Document</title>
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <meta http-equiv='X-UA-Compatible' content='ie=edge'>
+  <title>Document</title>
+  <style>
+    .list-complete-item {
+      transition: all 1s;
+      display: inline-block;
+      margin-right: 10px;
+    }
+
+    .list-complete-enter,
+    .list-complete-leave-to
+    /* .list-complete-leave-active for below version 2.1.8 */
+
+    {
+      opacity: 0;
+      transform: translateY(30px);
+    }
+
+    .list-complete-leave-active {
+      position: absolute;
+    }
+  </style>
 </head>
 
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.14.1/lodash.min.js"></script>
-    <div id="example">
-        
-    </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.14.1/lodash.min.js"></script>
+  <div id="example" class="demo">
+    <button v-on:click="shuffle">shuffle</button>
+    <button v-on:click="add">Add</button>
+    <button v-on:click="remove">Remove</button>
+    <transition-group name="list-complete" tag="p">
+      <span v-for="item in items" v-bind:key="item" class="list-complete-item">
+            {{item}}
+          </span>
+    </transition-group>
+  </div>
+  <div id="sudoku-demo" class="demo">
+    <strong>Lazy Sudoku</strong>
+    <p>Keep hitting the shuffle button until you win.</p>
+    <button @click="shuffle">
+        Shuffle
+      </button>
+    <transition-group name="cell" tag="div" class="sudoku-container">
+      <div v-for="cell in cells" :key="cell.id" class="cell">
+        {{ cell.number }}
+      </div>
+    </transition-group>
+  </div>
+
+  <style>
+    .sudoku-container {
+      display: flex;
+      flex-wrap: wrap;
+      width: 238px;
+      margin-top: 10px;
+    }
+
+    .cell {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      width: 25px;
+      height: 25px;
+      border: 1px solid #aaa;
+      margin-right: -1px;
+      margin-bottom: -1px;
+    }
+
+    .cell:nth-child(3n) {
+      margin-right: 0;
+    }
+
+    .cell:nth-child(27n) {
+      margin-bottom: 0;
+    }
+
+    .cell-move {
+      transition: transform 1s;
+    }
+  </style>
 </body>
 
 </html>
 <script src='../vue.js'></script>
 <script>
+  const vue1 = new Vue({
+    el: '#example',
+    data: {
+      items: [1, 2, 3, 4, 5, 6, 7, 8, 9],
+      nextNum: 10
+    },
+    methods: {
+      randomIndex: function () {
+        return Math.floor(Math.random() * this.items.length)
+      },
+      add: function () {
+        this.items.splice(this.randomIndex(), 0, this.nextNum++)
+      },
+      remove: function () {
+        this.items.splice(this.randomIndex(), 1)
+      },
+      shuffle: function () {
+        this.items = _.shuffle(this.items);
+      }
+    }
+  })
 
+</script>
+<script>
+  new Vue({
+    el: '#sudoku-demo',
+    data: {
+      cells: Array.apply(null, { length: 81 })
+        .map(function (_, index) {
+          return {
+            id: index,
+            number: index % 9 + 1
+          }
+        })
+    },
+    methods: {
+      shuffle: function () {
+        this.cells = _.shuffle(this.cells)
+      }
+    }
+  })
 </script>
