--- a/vue/demo/vue-router-demo/别名.html
+++ b/vue/demo/vue-router-demo/别名.html
@@ -21,5 +21,45 @@
   const Foo = { template: '<div>foo</div>' }
   const Bar = { template: '<div>bar</div>' }
   const Baz = { template: '<div>baz</div>' }
+  const routes = [
+    {
+      path: '/home', component: Home,
+      children: [
+        //absolute alias 别名为/foo  即/foo => 打开的是/home/foo
+        { path: 'foo', component: Foo, alias: '/foo' },
+        // relative alis alias to /home/bar-alias
+        { path: 'bar', component: Bar, alias: 'bar-alias' },
+        // multiple aliases
+        { path: 'baz', component: Baz, alias: ['/baz', ''] }
+      ]
+    }
+  ];
+
+  const router = new VueRouter({
+    routes
+  })
+  new Vue({
+    router,
+    template: `
+    <div id="app">
+      <h1>Route Alias</h1>
+      <ul>
+        <li><router-link to="/foo">
+          /foo (renders /home/foo)
+        </router-link></li>
+        <li><router-link to="/home/bar-alias">
+          /home/bar-alias (renders /home/bar)
+        </router-link></li>
+        <li><router-link to="/baz">
+          /baz (renders /home/baz)</router-link>
+        </li>
+        <li><router-link to="/home/baz-alias">
+          /home/baz-alias (renders /home/baz)
+        </router-link></li>
+      </ul>
+      <router-view class="view"></router-view>
+    </div>
+  `
+  }).$mount('#app')
 
 </script>
